@@ -35,21 +35,6 @@
        <string>&amp;Performance</string>
       </attribute>
       <layout class="QVBoxLayout" >
-       <property name="spacing" >
-        <number>6</number>
-       </property>
-       <property name="leftMargin" >
-        <number>9</number>
-       </property>
-       <property name="topMargin" >
-        <number>9</number>
-       </property>
-       <property name="rightMargin" >
-        <number>9</number>
-       </property>
-       <property name="bottomMargin" >
-        <number>9</number>
-       </property>
        <item>
         <widget class="QGroupBox" name="priority_group" >
          <property name="title" >
@@ -349,6 +334,43 @@
         </widget>
        </item>
        <item>
+        <widget class="Line" name="yt_line" >
+         <property name="orientation" >
+          <enum>Qt::Horizontal</enum>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <layout class="QHBoxLayout" >
+         <item>
+          <widget class="QLabel" name="yt_label" >
+           <property name="text" >
+            <string>Youtube &amp;quality</string>
+           </property>
+           <property name="buddy" >
+            <cstring>yt_quality_combo</cstring>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QComboBox" name="yt_quality_combo" />
+         </item>
+         <item>
+          <spacer>
+           <property name="orientation" >
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" >
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+        </layout>
+       </item>
+       <item>
         <spacer>
          <property name="orientation" >
           <enum>Qt::Vertical</enum>
@@ -636,6 +658,7 @@
   <tabstop>coreavc_check</tabstop>
   <tabstop>fast_audio_combo</tabstop>
   <tabstop>fast_chapter_check</tabstop>
+  <tabstop>yt_quality_combo</tabstop>
   <tabstop>cache_files_spin</tabstop>
   <tabstop>cache_streams_spin</tabstop>
   <tabstop>cache_dvds_spin</tabstop>
